# stock-auto-tracker

./: .env.example  .gitignore  ENTRY_TACTICS_SPEC.md  MARKET_CYCLE_SYSTEM_KR.md  PBKR_V4_GROWTH_POLICY.md  PBKR_V4_SUPREME_DOCTRINE.md  POSITION_SIZING_TOTAL_OPEN_RISK.md  README.md  SCREENING_WATCHLIST_SYSTEM.md  SELL_RULES_POSITION_MANAGEMENT.md  SNIPE_DAILY_PROCESS.md  current_prices.csv  current_prices.json  pyproject.toml  serp.ipynb  serp_secure_push.ipynb  serp_secure_push_final.ipynb  serp_secure_push_final_v2.ipynb  serpapi_automator.py
.github/workflows/: main.yml  phase3_drive_smoke.yml  serp_run.yml
config/: watchlist.example.yaml
stock_auto_tracker/: analyzer.py  cli.py  config.py  models.py  provider.py  storage.py
stock_research/: README.md
stock_research/docs/: data_locations.md  path_config.md
stock_research/phase3_report_pipeline/: README.md
stock_research/prompts/: PBKR-Auditor.md  PBKR-NewsGrounder.md  PBKR-Orchestrator.md
stock_research/schemas/: audit_pack.schema.json  candidate_score_pack.schema.json  news_pack.schema.json  report_inventory.schema.json  rolling_memory.schema.json  trade_ticket.schema.json
stock_research/scripts/: build_report_inventory.py  dedupe_reports.py  migrate_daily_reports.py  rolling_append.py  scan_report_sources.py  validate_pbkr_outputs.py  validate_report_inventory.py
stock_research/templates/: audit_history.csv  candidate_history.csv  estimate_revision_history.csv  pb_state_history.csv  portfolio_risk_history.csv  report_inventory.csv  sector_history.csv
tests/: test_snapshot.py
(+369 files in other folders)
